# coder-django-96125-ejercicio2

./: README.md  pyproject.toml
docs/: ORM.md
src/: db.sqlite3
src/config/: settings.py  urls.py
src/servicios/: admin.py  forms.py  models.py  views.py
src/servicios/migrations/: 0001_initial.py  0002_servicio_alter_cliente_apellido_alter_cliente_nombre.py  0003_cliente_email_alter_cliente_celular_and_more.py
src/servicios/templates/servicios/: base.html  cliente_confirm_delete.html  cliente_detail.html  cliente_form.html  cliente_list.html  index.html  pedido_confirm_delete.html  pedido_detail.html  pedido_form.html  pedido_list.html  servicio_confirm_delete.html  servicio_detail.html  servicio_form.html  servicio_list.html
src/servicios/views/: cliente.py  pedido.py  servicio.py
