[project]
name = "coder-django-96125-ejercicio2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-phonenumber-field[phonenumbers]>=8.4.0",
]

[dependency-groups]
dev = [
    "ipython>=9.12.0",
]
